<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.enclave.barry.recipeapp.app.recipeDetail.vm.RecipeDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_activity"
        tools:context=".screen.recipeDetail.RecipeDetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                app:menu="@menu/recipe_detail_menu"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize">

                <TextView
                    android:id="@+id/txtActivityTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/title_new_recipe"
                    android:textColor="#FFF"
                    android:textSize="21sp" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="@color/background_activity">

                <ImageView
                    android:contentDescription="@string/img_no_content_description"
                    android:id="@+id/imageRecipe"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:focusable="true" />
                <!--                    app:srcCompat="@drawable/defaultfood"-->

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="26dp"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:layout_constraintBottom_toBottomOf="@+id/imageRecipe"
                    app:layout_constraintEnd_toEndOf="@+id/imageRecipe"
                    app:srcCompat="@drawable/ic_ico_edit"
                    android:contentDescription="@string/img_no_content_description"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_recipe_name"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageRecipe" />

                <EditText
                    android:id="@+id/editTextTextPersonName2"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/bg_edit_text_background"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@={viewmodel.currentRecipe.name}"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/imageRecipe"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="0dp"
                    android:layout_height="96dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/bg_edit_text_background"
                    android:ems="10"
                    android:gravity="fill_horizontal"
                    android:inputType="textMultiLine|text"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:text="@={viewmodel.currentRecipe.description}"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerRecipeTypes" />

                <Spinner
                    android:id="@+id/spinnerRecipeTypes"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_edit_text_background"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_type"
                    app:layout_constraintBottom_toBottomOf="@+id/spinnerRecipeTypes"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/spinnerRecipeTypes" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ingredientLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:animateLayoutChanges="true"
                    android:background="#BFF1C1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
                    tools:context=".screen.recipeDetail.child.ingredient.IngredientFragment">


                    <EditText
                        android:id="@+id/edtIngredient"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/bg_edit_text_background"
                        android:ems="10"
                        android:hint="@string/hint_enter_ingredient_here"
                        android:inputType="textMultiLine"
                        android:paddingStart="16dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="10dp"
                        app:layout_constraintEnd_toStartOf="@+id/btnAddIngredient"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/label_ingredients"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/btnAddIngredient"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="8dp"
                        android:background="?android:attr/actionBarItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        app:layout_constraintBottom_toBottomOf="@+id/edtIngredient"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/edtIngredient"
                        app:srcCompat="@drawable/ic_add" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/listIngredients"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:nestedScrollingEnabled="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtIngredient"
                        tools:itemCount="3"
                        tools:listitem="@layout/item_ingredient" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/stepLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#CDD4FF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ingredientLayout"
                    tools:context=".screen.recipeDetail.child.step.StepFragment">

                    <EditText
                        android:id="@+id/edtStep"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/bg_edit_text_background"
                        android:ems="10"
                        android:hint="@string/label_enter_step_here"
                        android:inputType="textMultiLine"
                        android:paddingStart="16dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="10dp"
                        app:layout_constraintEnd_toStartOf="@+id/btnAddStep"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtStep" />

                    <TextView
                        android:id="@+id/txtStep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/label_steps"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/btnAddStep"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="8dp"
                        android:background="?android:attr/actionBarItemBackground"
                        android:clickable="true"
                        android:contentDescription="@string/img_no_content_description"
                        android:focusable="true"
                        app:layout_constraintBottom_toBottomOf="@+id/edtStep"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/edtStep"
                        app:srcCompat="@drawable/ic_add" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/listSteps"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="64dp"
                        android:nestedScrollingEnabled="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtStep"
                        tools:itemCount="3"
                        tools:listitem="@layout/item_ingredient" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_description"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/bg_normal_button_round_ripple"
                    android:text="@string/label_save"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>